Version 0.2.0~dev

	* Add _get_output_extension to action API, refs: #4588.

Version 0.1.1 Released on 2011/07/21

	* Replace _{add|get}_output_tmp_path with _{add|get}_output_path
	  in manzanita rewrap action, closes: #4495.

Version 0.1.0 Released on 2011/07/21

	* Initial release, closes: #4188.
	* Add support for kt-toolbox extract action, closes: #4234.
	* Add support for manzanita rewrap action, closes: #4239.
	* Fix module importation in action sub packages.
	* Do not manage output paths in toolbox2 actions, closes: #4253.
	* Add preexec_fn method to Command class.
	* Change output key from tmp_path to path and add infos setting.
	* Fetch STL files using kt-toolbox output in kttoolbox extract
	  action.
	* Support track_id_path setting in kttoolbox extract action.
	* Support basename option in kttoolbox worker.
	* Change settings namespace in kttoolbox extract action.
	* Rename track_id_path setting to teletext_track_output_path_id
	  in kttoolbox extract action.